Ensure json files are written as UTF-8 (#332)
Since internal string encoding differs on windows.